added storage controller and service methods
