# Backend/openapi-spec.yaml
@@ -87,7 +87,6 @@ paths:
                 type: string
         '500':
           description: Server error
-
   /storage/{storageId}:
     get:
       tags:
@@ -108,6 +107,190 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Storage'
+        '500':
+          description: Server error
+    delete:
+      tags:
+        - Storage
+      operationId: deleteStorage
+      description: Deletes specific storage of user
+      parameters:
+        - name: storageId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Successfully deleted storage
+          content:
+            application/json:
+              schema:
+                type: string
+        '500':
+          description: Server error
+    patch:
+      operationId: changeStore
+      description: Changes store of user
+      parameters:
+        - name: storageId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Successfully changed storage
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Storage'
+        '500':
+          description: Server error
+  /storage/{storageId}/product/{barcode}:
+    post:
+      tags:
+        - Storage
+      operationId: addProductToStorage
+      description: Add product to storage. Product identified by barcode.
+      parameters:
+        - name: storageId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: barcode
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successfully added already created product to store
+          content:
+            application/json:
+              schema:
+                type: string
+        '204':
+          description: the given barcode is not yet registered
+          content:
+            application/json:
+              schema:
+                type: string
+        '500':
+          description: Server error
+    delete:
+      tags:
+        - Storage
+      operationId: removeProductFromStorage
+      description: Remove product from storage
+      parameters:
+        - name: storageId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: barcode
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successfully removed product from store
+          content:
+            application/json:
+              schema:
+                type: string
+        '500':
+          description: Server error
+    patch:
+      tags:
+        - Storage
+      operationId: updateProductAmount
+      description: Update amount of product in storage
+      parameters:
+        - name: storageId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: barcode
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: amount
+          in: query
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successfully changed amount of product in store
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StorageEntry'
+        '500':
+          description: Server error
+  /storage/{storageId}/product/{barcode}/increase:
+    patch:
+      tags:
+        - Storage
+      operationId: increaseProductAmount
+      description: increases or decreases amount of given product in given storage
+      parameters:
+        - name: storageId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: barcode
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successfully increased product amount in storage
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StorageEntry'
+        '500':
+          description: Server error
+  /storage/{storageId}/product/{barcode}/decrease:
+    patch:
+      tags:
+        - Storage
+      operationId: decreaseProductAmount
+      description: decreases or decreases amount of given product in given storage
+      parameters:
+        - name: storageId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: barcode
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successfully decreased product amount in storage
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StorageEntry'
         '500':
           description: Server error
 
